[package]
name = "tide-static-file"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
http = "0.1.16"
range_header = "0.2.0"
log = "0.4.6"
mime = "0.3.13"
mime_guess = "2.0.0-alpha.6"
http-service = "0.1.4"
bytes = "0.4.12"
lazy_static = "1.3.0"
futures-preview = "0.3.0-alpha.13"

[dependencies.tide]
git = "https://github.com/rustasync/tide.git"
rev = "7e87e4e0699a3fff4453c8a25d3f8f5fa186fdbb"
