[package]
name = "tide-static-file"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
http = "0.1.17"
range_header = "0.2.0"
log = "0.4.6"
mime = "0.3.13"
mime_guess = "2.0.0-alpha.6"
http-service = "0.1.4"
bytes = "0.4.12"
lazy_static = "1.3.0"
futures-preview = "0.3.0-alpha.13"
httpdate = "0.3.2"
percent-encoding = "1.0.1"
crossbeam-channel = "0.3.8"

[dependencies.tide]
git = "https://github.com/rustasync/tide.git"
rev = "d14e8f82f0df3dec25f55a8f26749a4aca384837"
